airflow/webserver/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: esb
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      serviceAccountName: airflow-sa
      containers:
        - name: webserver-pod
          image: registry.tritux.com/easybulk3/airflow:v3.0.2
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - >
              airflow db upgrade &&
              airflow users create --username admin --password admin
              --firstname Admin --lastname admin --role Admin
              --email admin@example.com &&
              airflow webserver
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: shared-data
              mountPath: /data
            - name: airflow-logs
              mountPath: /opt/airflow/logs
      volumes:
        - name: shared-data
          hostPath:
            path: /mnt/nfs-share/back/files
            type: Directory
        - name: airflow-logs
          hostPath:
            path: /mnt/nfs-share/airflow/logs
            type: Directory
      imagePullSecrets:
        - name: docker-registry-secret
