airflow/webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  labels:
    app: webserver
  namespace: esb
spec:
  ports:
  - port: 7071
    protocol: TCP
    targetPort: 8080
  selector:
    app: webserver
